Add desktop module as library module for desktop_app